[package]
name = "roadie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["cargo"] }
ron = "0.7.0"
serde = { version = "1", features = ["derive"] }
walkdir = "2.3.2"
